--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
 [build-system]
 requires = [
     "setuptools>=42",
+    "bitsv==0.11.5",
+    "pydantic==1.8.2",
+    "requests==2.26.0",
+    "SQLAlchemy==1.4.26",
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
