--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,11 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    bitsv>=0.11.5
+    pydantic>=1.8.2
+    requests>=2.26.0
+    SQLAlchemy>=1.4.26
 
 [options.packages.find]
 where = src
