Update repo url

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,29 +1,34 @@
 [metadata]
 name = metafile_sdk
-version = 0.2.9
+version = 0.3.2
 author = Metafile.id
 author_email = xiangpeng@metafile.id
-description =  Metafile Python SDK
+description = Metafile Python SDK
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/gitzhou/metafile-sdk-py
+url = https://github.com/xiangpengm/metafile-sdk-py
 project_urls =
-    Bug Tracker = https://github.com/gitzhou/metafile-sdk-py/issues
+	Bug Tracker = https://github.com/xiangpengm/metafile-sdk-py/issues
 classifiers =
-    Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
+	Programming Language :: Python :: 3
+	License :: OSI Approved :: MIT License
+	Operating System :: OS Independent
 
 [options]
 package_dir =
-    = src
+	= src
 packages = find:
 python_requires = >=3.6
 install_requires =
-    bitsv >= 0.11.5
-    pydantic >= 1.8.2
-    requests >= 2.26.0
-    SQLAlchemy >= 1.4.26
+	bitsv >= 0.11.5
+	pydantic >= 1.8.2
+	requests >= 2.26.0
+	SQLAlchemy >= 1.4.26
 
 [options.packages.find]
 where = src
+
+[egg_info]
+tag_build =
+tag_date = 0
+
