--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = metafile_sdk
-version = 0.3.2
-author = Metafile.id
+version = 0.3.3
+author = https://github.com/xiangpengm
 author_email = xiangpeng@metafile.id
 description = Metafile Python SDK
 long_description = file: README.md
